--- a/styles/candidates.module.css
+++ b/styles/candidates.module.css
@@ -4,9 +4,9 @@
 }
 .main,
 .main_voted {
-  background-position: center;
-  background-size: cover;
-  background-image: url('../public/program.jpg');
+  /* background-position: center; */
+  background-size: 100px 100px;
+  background-image: url('../public/photo.jpg');
   position: relative;
   /* height: 100%; */
   height: calc(100vh + 450px);
@@ -70,12 +70,14 @@
 }
 .content_hero_img,
 .content_hero_img_reg {
-  margin-top: -20px;
+  /* margin-top: -20px; */
+  border-radius: 50%;
+  margin: 1rem auto;
 }
 
-.content_hero_img_reg {
+/* .content_hero_img_reg {
   margin-left: -30px;
-}
+} */
 .heading {
   font-size: 2.5rem;
   margin-bottom: 1rem;
